final preparation for release + demo app